--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
 android.enableR8.fullMode=false
+org.gradle.caching=true
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
